2006-05-24 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/simplify/TopologyPreservingSimplifierTest.cpp:
	added new test.
	* tests/unit/utility.h: added helper library for Unit Tests
	with 'utility' namespace.

2006-05-24 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/simplify/TaggedLinesSimplifier.h:
	added LineSegmentIndex.h include so that every
	use of the templated simplify() function get all the
	required definitions.
	* source/headers/geos/opLinemerge.h,
	source/headers/geos/algorithm/Makefile.am,
	source/headers/geos/geom/Makefile.am,
	source/headers/geos/geomgraph/Makefile.am,
	source/headers/geos/operation/Makefile.am,
	source/headers/geos/operation/distance/Makefile.am,
	source/headers/geos/operation/linemerge/Makefile.am,
	source/headers/geos/operation/overlay/Makefile.am,
	source/headers/geos/operation/overlay/OverlayOp.h,
	source/headers/geos/operation/polygonize/Makefile.am,
	source/headers/geos/operation/relate/Makefile.am,
	source/headers/geos/planargraph/Makefile.am:
	reduced number of installed headers.
	* source/headers/geos/simplify/TaggedLinesSimplifier.h,
	source/simplify/TaggedLinesSimplifier.cpp,
	source/simplify/TopologyPreservingSimplifier.cpp:
	fixed bug in TopologyPreservingSimplifier failing to
	detect intersections, refactored TaggedLinesSimplifier
	class to more closely match JTS and use templated
	functions.
	* capi/geos_c.h.in: #include <stddef.h> to get size_t
	definition (only #ifndef __cplusplus)

2006-05-23 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/Coordinate.h: added
	missing <string> include.
	* source/headers/geos/config.h: removed file which
	is not supposed to be in the repository.
	* source/headers/geos/index/quadtree/DoubleBits.h,
	source/index/quadtree/DoubleBits.cpp: const correctness
	and documentation.
	* source/io/ByteOrderValues.cpp: fixed bug in putLong()
	also affecting putDouble()
	* tests/unit/Makefile.am, tests/unit/io/ByteOrderValuesTest.cpp: